--- a/project/frontend/src/App.css
+++ b/project/frontend/src/App.css
@@ -1,7 +1,9 @@
 /* src/style.css */
 
 .page {
-  display: none;
+  background: rgb(29, 137, 226);
+  color: #f8f4f4;
+  border-radius: 5px;
 }
 
 .page.active {
@@ -129,10 +131,14 @@ position: relative;
 left:100px ;
 
 }
-
-@media (max-width: 768px) {
+/*phone*/
+@media (max-width: 668px) {
   #add-product-page{
     width: 500px;
+  }
+  .login-box{
+    position: relative;
+    right: 500px;
   }
   #valeur{
     position: relative;
@@ -165,6 +171,38 @@ left:100px ;
   .btn {
     padding: 0.375rem 0.75rem;
     font-size: 0.875rem;
+  }
+  .card{
+    width: 600px;
+    
+  }
+  .card-body{
+    width: 500px;
+  }
+  #aa{
+    position: relative;
+    bottom: 90px;
+    left: 220px;
+  }
+}
+/*tablet*/
+@media (max-width: 1000px) {
+  .card{
+    width: 920px;
+  }
+
+  .card-body{
+    width: 800px;
+  }
+}
+@media (max-width: 500px) {
+  .card{
+    width: 450px;
+  }
+  .card-body{
+    width: 400px;
+    position: relative;
+    left: 10px;
   }
 }
 
@@ -205,6 +243,7 @@ left:100px ;
     margin: 1.75rem auto;
     max-width: 500px;
   }
+ 
 }
 
 /* Charts Responsive Styles */
@@ -457,16 +496,18 @@ body.dark-mode #users-page .text-muted {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f8f9fc;
+  background-color: #ffffff00;
+  width: 1000px;
+
 }
 
 .login-box {
-  width: 100%;
-  max-width: 400px;
+  width: 400px;
+  height: px;
   padding: 30px;
   border-radius: 8px;
-  background-color: white;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: rgba(44, 109, 214, 0.46);
+  box-shadow: 1px 9px 10px rgba(0, 0, 0, 0.1);
   transform: scale(0.8); /* Initial small size */
   transition: transform 0.5s ease-in-out; /* Smooth zoom-in effect */
 }
@@ -509,4 +550,41 @@ body.dark-mode #users-page .text-muted {
 .hamburger{
   height: 40px;
 }
+
+#imm{
+  position: relative;
+  right: 60px;
+  bottom: 40px;
+
+}
+.user-info {
+  background-color: #4e4e51;
+  padding: 20px;
+  border-radius: 5px;
+  margin-top: 10px;
+  position: relative;
+  bottom: 35px;
+  height: 90px;
+}
+
+.btn2 {
+  background-color: #dc3545;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  color: #ffffff;
+  position: relative;
+  top: 6px;
+}
+
+.btn2:hover {
+  background-color: #c82333;
+  transform: scale(1.05);
+}
+.tb{
+  position: relative;
+  top: 10px;
+}
+
 
